--- a/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    bucket-name: sky-web-learn
+    #前段已经加上了https://
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-secret: dPTsbvy3PbenmHdaOzdDdHMnEuOk2y
+    access-key-id: LTAI5tBUvoPFKgRnvcc2rVc7
